fix: changed grid to flex and added three columns to fix issue where images dind't align close to each other

--- a/src/components/home/SectionThree/SectionThree.module.css
+++ b/src/components/home/SectionThree/SectionThree.module.css
@@ -18,13 +18,16 @@
 
 
 .imagesGrid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); 
+  display: flex;
   gap: var(--spacing-lg); 
-  align-items: start;
   margin-top: var(--spacing-lg);
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   padding: var(--spacing-xl)
+}
+
+.column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-lg);
 }
